--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
     default_type application/octet-stream;
 
     server {
-        listen 443 ssl;
+        listen 80;
         server_name localhost;
 
         ssl_certificate /etc/nginx/ssl/cert.pem;
